--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ravi Teja | Full Stack Developer Portfolio</title>
+    <title>Ravi Teja - Portfolio</title>
     <meta name="description" content="Java Full Stack Developer with 6+ years of experience building secure, scalable applications in banking, healthcare, and e-commerce." />
     <meta name="author" content="Ravi Teja" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
