--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+     <link rel="icon" type="image/png" href="/logo.png">
     <title>Ravi Teja - Portfolio</title>
     <meta name="description" content="Java Full Stack Developer with 6+ years of experience building secure, scalable applications in banking, healthcare, and e-commerce." />
     <meta name="author" content="Ravi Teja" />
