--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ravi Teja | Full Stack Developer Portfolio</title>
+    <link rel="icon" type="image/png" href="/logo.png">
+    <title>Ravi Teja - Portfolio</title>
     <meta name="description" content="Java Full Stack Developer with 6+ years of experience building secure, scalable applications in banking, healthcare, and e-commerce." />
     <meta name="author" content="Ravi Teja" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,11 +15,9 @@
     <meta property="og:title" content="Ravi Teja | Full Stack Developer Portfolio" />
     <meta property="og:description" content="Java Full Stack Developer specializing in Spring Boot, React, AWS, and Cloud-Native Solutions" />
     <meta property="og:type" content="website" />
-    <!-- <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <!-- <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
+    <meta name="twitter:site" content="@ravi_teja" />
   </head>
 
   <body>
